# cg-2016

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  nurbs-links.md
doc/: CMakeLists.txt  main.md  surfaces.md
first/: .ycm_extra_conf.py  CMakeLists.txt
first/res/: common.glsl  fragment.glsl  vertex.glsl
first/src/: main.cpp
first/src/base/: ErrorChecker.h  Logging.h  Program.cpp  Program.h  Scene.cpp  Scene.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h
first/src/geometry/: DrawContext.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h
first/src/loader/: BasicObjLoader.cpp  BasicObjLoader.h
first/src/tests/: Utils.h  objloader.cpp
info/: biblio  contact
res/: common.glsl  fragment.glsl  geometry.glsl  tess-control.glsl  tess-eval.glsl  vertex.glsl
res/bezier-terrain/: common.glsl  fragment.glsl  geometry.glsl  tess-control.glsl  tess-eval-plain.glsl  tess-eval.glsl  vertex.glsl
res/dyn-terrain/: common.glsl  fragment.glsl  geometry.glsl  tess-control.glsl  tess-eval.glsl  vertex.glsl
res/models/: Airbus A310.mtl  QuestionBlock.mtl
res/models/rocket/: rocket.blend  rocket.mtl
res/quad-terrain/: tess-eval.glsl
res/skybox/: common.glsl  fragment.glsl  vertex.glsl
src/: image-processing.cpp  main.cpp
src/base/: BezierTerrain.cpp  BezierTerrain.h  DebuggingUtils.cpp  DebuggingUtils.h  DynTerrain.cpp  DynTerrain.h  ITerrain.h  InputUtils.cpp  InputUtils.h  Logging.h  Plane.cpp  Plane.h  Platform.cpp  Platform.h  Program.cpp  Program.h  QuadTerrain.cpp  QuadTerrain.h  Scene.cpp  Scene.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h
src/geometry/: DrawContext.h  Material.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Vertex.h
src/image-processing/: CMakeLists.txt  image-processing.cpp
src/main/: CMakeLists.txt  PhysicsState.cpp  PhysicsState.h  main.cpp
src/splines/: CMakeLists.txt  HermiteCurve.ts  Line.ts  PolyLine.ts  Spline.ts  index.html  splines.html  splines.ts
src/tests/: optional.cpp
src/tools/: ArrayView.h  Optional.h  Path.cpp  Path.h
